# Sovereign-Logic

./: LICENSE  README.md  RSA_SINGULARITY_SETTLEMENT.txt  SECURITY.md  SOVEREIGN_SPEC.md  lattice_cli.py  lattice_listener.py  lattice_web.py  monitor_lattice.py  pyproject.toml  setup.py  sovereign_vault.json  test_vault.py
.github/workflows/: python-publish.yml
data/: golden_manifold_gen.py  golden_reference.pgm  manifold.pgm  test.raw  zenith_ingestor.py  zenith_manifold.pgm  zenith_pass_raw.raw
docs/: CERTIFICATE_OF_AUTHENTICITY.md  FEDERATION_PROTOCOL.md  ROADMAP_OMEGA.md
examples/: bridge_demo.py  crypto_audit.py  logic_tension.py  precision_test.py  scan_entropy.py  signal_recon.py  system_risk.py  unleashed.py
kissat_sovereign/src/: engine.cpp  quantum_engine.cpp
manifold_analyzer/: analyzer.py  cascade_control.py  fidelity_check.py
sovereign_harvest/: harvest.py
sovereign_logic/: __init__.py  bridge.py  constants.json  engine.py  guard.py  lattice.py  vault.py
sovereign_logic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_lattice.py
