[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign_logic"
version = "1.1.0"
authors = [{name = "Americo Simoes"}]
description = "1024-bit Unitary Propagator and Quantum-Laminar Mapping Engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["manifold_analyzer*", "data*"]
