[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-logic"
version = "2.0.0"
description = "2.0.0-Omega: 1024-bit Unitary Logic Bridge with Gated Persistence"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Americo Simoes"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "flask",
]

[tool.setuptools]
packages = ["sovereign_logic"]
